[tool.poetry]
name = "jax-rl"
version = "0.1.0"
description = "JAX implementations of core Deep RL algorithms"
authors = ["Henry Prior <henry.prior@cims.nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
dm-control = "0.0.300771433"
dm-haiku = "git+https://github.com/deepmind/dm-haiku"
flax = "^0.2.2"
jax = "^0.2.6"
jaxlib = "0.1.57"
numpy = "1.18.4"
tensorflow = "2.1.2"
tensorflow_estimator = "==2.1.0"
reorder-python-imports = "^2.3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"
xdoctest = "^0.13.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.13"
pep8-naming = "^0.11.1"
darglint = "^1.5.1"
reorder-python-imports = "^2.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
